fix center alignment of newitem page

--- a/flask/app/static/css/newitem.css
+++ b/flask/app/static/css/newitem.css
@@ -57,16 +57,19 @@ body {
 }
 
 .center {
+  align-items: center;
   justify-items: center;
 }
 
 .mainbox {
+  margin: 2%;
+  padding: 2%;
   justify-items: center;
   max-height: 100%;
   background: var(--button--color);
-  padding: 40px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   max-width: 50%;
+  border-radius: 20px;
 }
 
 .upload-box {
@@ -107,24 +110,34 @@ body {
   color: var(--text--color);
 }
 
-
 .input-box {
-  width: 100%;
-  padding: 10px 12px;
-  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-radius: 8px;
   font-size: 0.95rem;
+  border: 1px solid #ccc;
+  padding: 10px 12px;
   margin-bottom: 10px;
-  resize: none;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.input-box-row2-left {
+  margin-right: 2.5%;
+}
+.input-box-row2-right {
+  margin-left: 2.5%;
 }
 .input-box-row2 {
-    width: 50%;
-    padding: 10px 12px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 0.95rem;
-    margin-bottom: 10px;
-    resize: none;
+  border-radius: 8px;
+  font-size: 0.95rem;
+  border: 1px solid #ccc;
+  padding: 10px 12px;
+  margin-bottom: 10px;
+  width: 100%;
+  resize: none;
+  box-sizing: border-box;
 }
 
 .row-2 {
